--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .sky {
-    background-image: url('fb-game-background.png');
+    background-image: url('game-background.png');
     width: 500px;
     height: 580px;
     position: absolute;
@@ -52,7 +52,7 @@ body {
 }
 
 .bird {
-    background-image: url('flappy-bird.png');
+    background-image: url('faby.png');
     position: absolute;
     width: 60px;
     height: 45px;
@@ -61,14 +61,14 @@ body {
 }
 
 .obstacle {
-    background-image: url('flappybird-pipe.png');
+    background-image: url('pipe.png');
     width: 60px;
     height: 300px;
     position: absolute;
 }
 
 .topObstacle {
-    background-image: url('flappybird-pipe.png');
+    background-image: url('pipe.png');
     transform: rotate(180deg);
     width: 60px;
     height: 300px;
